# axion

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  versions.json
.github/workflows/: ci.yml  docs.yml
0.0.1/: 404.html  objects.inv
0.0.1/agent_playbook/: index.html
0.0.1/getting-started/installation/: index.html
0.0.1/search/: search_index.json
0.0.1/stylesheets/: extra.css
agent_playbook/: index.html
axion/: .gitignore  __init__.py  dataset.py  dataset_schema.py  display.py  error.py  handlers.py  llm_registry.py  logging.py  schema.py  tracing.py  utils.py  validation.py
axion/_core/: __init__.py  asyncio.py  display.py  environment.py  error.py  logging.py  metrics_utils.py  networking.py  schema.py  types.py  utils.py  uuid.py
axion/_handlers/: utils.py  validation.py
axion/align/: __init__.py  align_eval.py  analysis.py  base.py  caliber_hq.py  console.py  constants.py  example_selector.py  json.py  notebook.py  pattern_discovery.py  ui.py  web_eval.py
axion/api/: __init__.py  base.py
axion/caliber/: __init__.py  analysis.py  annotation.py  evaluation.py  example_selector.py  models.py  pattern_discovery.py  prompt_optimizer.py  schema.py  session.py  upload.py
axion/docs/: display_registry.py  eval_tree.py  evaluate.py  metric.py
axion/eval_tree/: __init__.py  _node.py  _tree.py  aggregation.py  component.py  metric.py  node.py  signal.py  tree.py
axion/metrics/: __init__.py  base.py  cache.py  execution_environment.py  schema.py  signal_extractor.py  signal_normalizer.py  utils.py  yaml_metrics.py
axion/prompt_learning/: __init__.py  optimizer.py  orchestrator.py  runner_wrapper.py  schema.py  signals.py
axion/reporting/: __init__.py  explanation_templates.py  insight_extractor.py  issue_extractor.py  latency.py  scorecard.py
axion/runners/: __init__.py  api.py  cost.py  evaluate.py  metric.py  mixin.py  strategies.py  summary.py  utils.py
axion/search/: __init__.py  base.py  extract_text.py  google_retriever.py  schema.py  tavily_retriever.py  you_retriever.py
axion/synthetic/: __init__.py  answer.py  document_generator.py  preprocessing.py  question.py  reflection.py  schema.py  statement_extractor.py  storage_manager.py  workflow.py
docs/: agent_playbook.md  evaluation_flywheel.md  index.md  langfuse-tags-env.md  prompt_learning.md  why_ground_truth_matters.md
docs/getting-started/: installation.md
docs/guides/: aligneval.md  caliberhq.md  datasets.md  evaluation.md  hierarchical-scoring.md  insight-extraction.md  issue-extraction.md  llm-providers.md  metrics.md  search.md  synthetic.md
docs/overrides/: main.html
docs/reference/: align.md  caliber.md  dataset.md  eval-tree.md  insight-extractor.md  issue-extractor.md  llm-registry.md  metrics.md  runners.md  schema.md  search.md  synthetic.md  tracer-registry.md
docs/stylesheets/: extra.css
evaluation_flywheel/: index.html
getting-started/installation/: index.html
guides/aligneval/: index.html
guides/caliberhq/: index.html
guides/datasets/: index.html
guides/evaluation/: index.html
guides/hierarchical-scoring/: index.html
guides/insight-extraction/: index.html
guides/issue-extraction/: index.html
guides/llm-providers/: index.html
guides/metrics/: index.html
guides/search/: index.html
guides/synthetic/: index.html
metric-registry/composite/: index.html
metric-registry/conversational/: index.html
metric-registry/heuristic/: index.html
metric-registry/tool/: index.html
overrides/: main.html
reference/align/: index.html
reference/caliber/: index.html
reference/dataset/: index.html
reference/eval-tree/: index.html
reference/insight-extractor/: index.html
reference/issue-extractor/: index.html
reference/llm-registry/: index.html
reference/metrics/: index.html
reference/runners/: index.html
reference/schema/: index.html
reference/search/: index.html
reference/synthetic/: index.html
reference/tracer-registry/: index.html
search/: search_index.json
stable/: 404.html  index.html  objects.inv
stable/agent_playbook/: index.html
stable/search/: search_index.json
stylesheets/: extra.css
tests/: __init__.py  test_dataset.py  test_dataset_schema.py  test_evidence.py  test_llm_registry.py  test_schema.py
tests/_core/: test_logging.py  test_networking.py
tests/_handlers/: test_utils.py
tests/align/: test_analysis.py  test_example_selector.py  test_notebook_renderer.py  test_pattern_discovery.py  test_web_eval.py
tests/caliber/: __init__.py  test_analysis.py  test_annotation.py  test_discover_from_evidence.py  test_distillation_handler.py  test_evaluation.py  test_evidence_models.py  test_evidence_pipeline.py  test_example_selector.py  test_models.py  test_pattern_discovery.py  test_pattern_discovery_determinism.py  test_pattern_display.py  test_plugins.py  test_prompt_optimizer.py  test_session.py  test_upload.py  test_utils.py
tests/metrics/: test_base.py
tests/reporting/: test_insight_extractor.py  test_issue_extractor.py
tests/runners/: test_api.py  test_cost.py  test_evaluate.py  test_metric.py  test_mixin.py  test_multi_metric.py  test_summary.py  test_utils.py
tests/search/: test_base.py  test_extract_text.py  test_google_retriever.py  test_schema.py  test_tavily.py  test_you_retriever.py
why_ground_truth_matters/: index.html
(+366 files in other folders)
