[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm[toml]>=6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "axion"
dynamic = ["version"]
description = "A modular white box evaluation framework for AI agents."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
{ name = "Matt Evanoff", email = "mevanoff24@gmail.com" },
]
classifiers = [
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3.12",
]

dependencies = [
"beautifulsoup4",
"cachetools",
"deepeval>=3.1.0",
"diskcache>=5.6.3",
"ipython",
"llama-index>=0.13.0",
"loguru>=0.7.2",
"nest-asyncio",
"numpy",
"litellm>=1.52.0",
"openai>=1.0.0",
"pandas",
"protobuf",
"psutil",
"pydantic",
"pydantic-graph>=1.41.0",
"pydantic-settings>=2.0.0",
"python-dotenv>=1.0.0",
"PyYAML>=6.0.1",
"ragas>=0.4.2",
"RestrictedPython",
"requests",
"rich",
"s3fs",
"tenacity",
"tqdm",
]

[project.optional-dependencies]
dev = [
"ruff==0.4.5",
"pre-commit",
"mkdocs",
"mkdocs-material",
"mkdocstrings[python]",
"mkdocs-git-authors-plugin",
"mkdocs-git-revision-date-localized-plugin",
"pytest",
"pytest-asyncio",
"coverage",
"mypy",
"mike",
"nbstripout",
]
# Tracing providers (optional)
logfire = ["logfire>=2.0.0"]
langfuse = ["langfuse>=3.0.0"]
opik = ["opik>=1.0.0"]
tracing = ["logfire>=2.0.0", "langfuse>=3.0.0", "opik>=1.0.0"]
# Visualization (optional)
plotting = ["matplotlib", "seaborn"]
# Search integrations (optional)
search = ["google-search-results>=2.4.2", "serpapi>=0.1.5"]
# LlamaIndex extensions (optional)
huggingface = ["llama-index-embeddings-huggingface>=0.6.0"]
docling = ["llama-index-readers-docling>=0.4.0"]
# Pattern discovery with BERTopic (optional)
bertopic = ["bertopic>=0.16.0", "sentence-transformers>=2.2.0"]

[project.urls]
Homepage = "https://github.com/ax-foundry/axion"
Documentation = "https://ax-foundry.github.io/axion/"
Repository = "https://github.com/ax-foundry/axion.git"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
fallback_version = "0.1.0"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "Q"]
ignore = ["E722", "E501"] # Allows "bare except:" blocks, Line Length

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
docstring-quotes = 'double'
multiline-quotes = 'double'

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
mypy_path = "."
explicit_package_bases = true
no_implicit_optional = false
exclude = ["tests/"]
check_untyped_defs = false

disable_error_code = [
"override",
"attr-defined",
"arg-type",
"assignment",
"type-var",
"union-attr",
"import-untyped",
"var-annotated",
"misc",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "setup"
ignore_missing_imports = true
